examples/mytest/test_unit/klee-out-1/test000001.ptr.err
Error: memory error: out of bound pointer
File: /home/bo/workspace/MyKlee/klee-copy/examples/mytest/test_unit/bubble2.c
Line: 10
assembly.ll line: 43
Stack: 
	#000000043 in bubble (v=8153120) at /home/bo/workspace/MyKlee/klee-copy/examples/mytest/test_unit/bubble2.c:10
	#100000111 in main () at /home/bo/workspace/MyKlee/klee-copy/examples/mytest/test_unit/bubble2.c:23
Info: 
	address: 8153144
	next: object at 8153152 of size 4
		MO18[4] allocated at main():  %0 = alloca i32
	prev: object at 8153120 of size 24
		MO19[24] allocated at main():  %v = alloca [6 x i32]
